# cdx-trade

./: .env  .env.example  .gitignore  AGENTS.md  README.md  alpaca_client.py  backtest.py  config.json  config.py  journal.py  main.py  pyproject.toml  regime.py  review.py  trade_logic.py
configs/: equity_core_1k.json  etf_breakout_1k.json  etf_core_1k.json  etf_meanrev_1k.json  volatility_etf_1k.json
data/: backtest_IWM_MeanReversion_D1_60d.csv  backtest_IWM_MeanReversion_D1_90d.csv  backtest_IWM_PrevDayBreakout_D1_30d.csv  backtest_QQQ_MeanReversion_D1_30d.csv  backtest_QQQ_MeanReversion_D1_60d.csv  backtest_QQQ_MeanReversion_D1_90d.csv  backtest_SPY_MeanReversion_D1_30d.csv  backtest_SPY_PrevDayBreakout_D1_30d.csv  backtest_trades.csv  no_trade_journal.csv  signal_queue.csv  trade_journal.csv  universe.txt
data/analysis/: cap3_rank_blended_skips.csv  cap3_rank_blended_trades.csv  constrained_min_score_015_skips.csv  constrained_min_score_015_trades.csv  constrained_min_score_020_skips.csv  constrained_min_score_020_trades.csv  constrained_min_score_025_skips.csv  constrained_min_score_025_trades.csv  constrained_min_score_skips.csv  constrained_min_score_trades.csv  constrained_rank_blended_skips.csv  constrained_rank_blended_trades.csv  smoke_30_blended_skips.csv  smoke_30_blended_trades.csv  smoke_30_pair_signals.csv  (+2 more)
knowledge/: README.md  alpaca_options_trading.md  changelog.md  go_live.md  home_server_pipeline.md  options_basics.md  proofcheck_documentation.md  rules.md  study.md
scripts/: run_cadence.py  run_multi_sleeve.py  run_sleeve.py  set_slot_mode.py
(+1354 files in other folders)
